crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@set.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% set variable = value %}\n{% set (a, b) = (1, 2) %}\n{% set variable2 %}\n    this is the {{ body }}\n{% endset %}\n{% set variable3 | upper %}\n    this is the {{ body }} with filter\n{% endset %}\n{% set sources, campaigns =\n    ['facebook', 'google'],\n    ['search', 'display'],\n%}\n{% set a, b = 1, 2, %}\n{% set a, b, %}\n    tuple set block body\n{% endset %}\n{% set x = 1, %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/set.txt
---
Ok(
    Template {
        children: [
            Set {
                target: Var {
                    id: "variable",
                } @ 1:8-1:16,
                expr: Var {
                    id: "value",
                } @ 1:19-1:24,
            } @ 1:1-1:27,
            EmitRaw {
                raw: "\n",
            } @ 1:27-2:1,
            Set {
                target: List {
                    items: [
                        Var {
                            id: "a",
                        } @ 2:9-2:10,
                        Var {
                            id: "b",
                        } @ 2:12-2:13,
                    ],
                } @ 2:9-2:13,
                expr: Tuple {
                    items: [
                        Const {
                            value: 1,
                        } @ 2:18-2:19,
                        Const {
                            value: 2,
                        } @ 2:21-2:22,
                    ],
                } @ 2:17-2:23,
            } @ 2:1-2:26,
            EmitRaw {
                raw: "\n",
            } @ 2:26-3:1,
            SetBlock {
                target: Var {
                    id: "variable2",
                } @ 3:8-3:17,
                filter: None,
                body: [
                    EmitRaw {
                        raw: "\n    this is the ",
                    } @ 3:20-4:17,
                    EmitExpr {
                        expr: Var {
                            id: "body",
                        } @ 4:17-4:27,
                    } @ 4:17-4:27,
                    EmitRaw {
                        raw: "\n",
                    } @ 4:27-5:1,
                ],
                start_tag_span:  @ 3:1-3:3,
                end_tag_span:  @ 5:1-5:3,
            } @ 3:1-5:13,
            EmitRaw {
                raw: "\n",
            } @ 5:13-6:1,
            SetBlock {
                target: Var {
                    id: "variable3",
                } @ 6:8-6:17,
                filter: Some(
                    Filter {
                        name: "upper",
                        expr: None,
                        args: [],
                    } @ 6:20-6:25,
                ),
                body: [
                    EmitRaw {
                        raw: "\n    this is the ",
                    } @ 6:28-7:17,
                    EmitExpr {
                        expr: Var {
                            id: "body",
                        } @ 7:17-7:27,
                    } @ 7:17-7:27,
                    EmitRaw {
                        raw: " with filter\n",
                    } @ 7:27-8:1,
                ],
                start_tag_span:  @ 6:1-6:3,
                end_tag_span:  @ 8:1-8:3,
            } @ 6:1-8:13,
            EmitRaw {
                raw: "\n",
            } @ 8:13-9:1,
            Set {
                target: List {
                    items: [
                        Var {
                            id: "sources",
                        } @ 9:8-9:15,
                        Var {
                            id: "campaigns",
                        } @ 9:17-9:26,
                    ],
                } @ 12:1-12:3,
                expr: Tuple {
                    items: [
                        List {
                            items: [
                                Const {
                                    value: 'facebook',
                                } @ 10:6-10:16,
                                Const {
                                    value: 'google',
                                } @ 10:18-10:26,
                            ],
                        } @ 10:5-10:27,
                        List {
                            items: [
                                Const {
                                    value: 'search',
                                } @ 11:6-11:14,
                                Const {
                                    value: 'display',
                                } @ 11:16-11:25,
                            ],
                        } @ 11:5-11:26,
                    ],
                } @ 12:1-12:3,
            } @ 9:1-12:3,
            EmitRaw {
                raw: "\n",
            } @ 12:3-13:1,
            Set {
                target: List {
                    items: [
                        Var {
                            id: "a",
                        } @ 13:8-13:9,
                        Var {
                            id: "b",
                        } @ 13:11-13:12,
                    ],
                } @ 13:21-13:23,
                expr: Tuple {
                    items: [
                        Const {
                            value: 1,
                        } @ 13:15-13:16,
                        Const {
                            value: 2,
                        } @ 13:18-13:19,
                    ],
                } @ 13:21-13:23,
            } @ 13:1-13:23,
            EmitRaw {
                raw: "\n",
            } @ 13:23-14:1,
            SetBlock {
                target: Var {
                    id: "a",
                } @ 14:8-14:9,
                filter: None,
                body: [
                    EmitRaw {
                        raw: "\n    tuple set block body\n",
                    } @ 14:16-16:1,
                ],
                start_tag_span:  @ 14:1-14:3,
                end_tag_span:  @ 16:1-16:3,
            } @ 14:1-16:13,
            EmitRaw {
                raw: "\n",
            } @ 16:13-17:1,
            Set {
                target: Var {
                    id: "x",
                } @ 17:8-17:9,
                expr: Tuple {
                    items: [
                        Const {
                            value: 1,
                        } @ 17:12-17:13,
                    ],
                } @ 17:15-17:17,
            } @ 17:1-17:17,
        ],
    } @ 1:1-17:17,
)
